# DeepSurvey

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: arxiv_data_response.json  crawl4ai_use_example.py  get_arxiv_data_response.py  get_google_scholar_response.py  google_scholar_response.json
src/autosurvey/: config.py  database.py  model.py  utils.py
src/autosurvey/agents/: outline_writer.py  section_writer.py  translator.py
src/autosurvey/prompts/: prompt_en2zh.py  prompt_zh.py
src/rag/: async_crawler.py  config.py  search_engine.py
src/rag/prompts/: crawler_prompt_en.py
src/request/: local.py  openai.py  wrapper.py
src/utils/: logger.py
tests/: conftest.py  test_arxiv_engine.py  test_arxiv_integration.py  test_async_crawler_integration.py  test_google_scholar_integration.py
